--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,12 +2,12 @@ name: Build GH-Pages
 
 on:
   push:
+    branches:
+      - main
     paths-ignore:
       - "images/**"
       - "LICENSE"
       - "README.md"
-    branches:
-      - main
   workflow_dispatch:
     # manual run
 
@@ -19,12 +19,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
-
-      - name: Get Theme
-        run: git submodule update --init --recursive
-
-      - name: Update theme to Latest commit
-        run: git submodule update --remote --merge
+          submodules: true # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
 
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
@@ -37,5 +33,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
