--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,8 +19,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
-          submodules: true # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
+          submodules: recursive
 
       - name: Setup hugo
         uses: peaceiris/actions-hugo@v2
