Update the PaperMod

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://blog.mhxie.me/"
+baseURL: "https://blog.mhxie.us/"
 title: Minghao's Personal Blog
 languageCode: en-us
 theme: PaperMod
